--- a/src/main/resources/Views/loginDialog.fxml
+++ b/src/main/resources/Views/loginDialog.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import de.jensd.fx.glyphs.octicons.OctIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -84,7 +85,10 @@
             <Button layoutX="326.0" layoutY="526.0" mnemonicParsing="false" onMouseClicked="#cancelButton" text="Cancelar" />
             <Text layoutX="29.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Imagen:" wrappingWidth="46.767578125" />
             <TextField fx:id="txtURL" layoutX="89.0" layoutY="10.0" prefHeight="24.0" prefWidth="254.0" promptText="URL o Selecciona desde el ordenador" />
-            <Button layoutX="352.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#uploadImageClick" prefHeight="20.0" prefWidth="34.0" />
+            <Button layoutX="352.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#uploadImageClick" prefHeight="20.0" prefWidth="34.0">
+               <graphic>
+                  <OctIconView glyphName="PIN" />
+               </graphic></Button>
             <Text layoutX="29.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Título:" />
             <TextField fx:id="txtTitulo" layoutX="89.0" layoutY="48.0" onKeyPressed="#updateText" onKeyReleased="#updateText" prefHeight="19.0" prefWidth="253.0" promptText="Título de la película" />
             <Text layoutX="29.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Director:" />
@@ -111,7 +115,10 @@
             <Text layoutX="91.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sala 1" />
             <Text layoutX="208.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sala 2" />
             <Text layoutX="327.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sala 3" />
-            <Button layoutX="399.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#imageFromWeb" prefHeight="22.0" prefWidth="33.0" />
+            <Button layoutX="399.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#imageFromWeb" prefHeight="22.0" prefWidth="33.0">
+               <graphic>
+                  <OctIconView glyphName="RADIO_TOWER" />
+               </graphic></Button>
          </children>
       </Pane>
    </center>
