--- a/src/main/resources/Views/empleadoDialog.fxml
+++ b/src/main/resources/Views/empleadoDialog.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import de.jensd.fx.glyphs.octicons.OctIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -13,10 +14,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="517.0" prefWidth="676.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="561.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.empleadoDialogController">
    <top>
-      <HBox prefHeight="11.0" prefWidth="595.0" styleClass="windowsBar" stylesheets="@../Styles/styleDEMO.css" BorderPane.alignment="CENTER">
+      <HBox onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="11.0" prefWidth="595.0" styleClass="windowsBar" stylesheets="@../Styles/styleDEMO.css" BorderPane.alignment="CENTER">
          <children>
             <HBox prefWidth="216.0">
                <children>
@@ -29,9 +29,9 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" />
                </HBox.margin>
             </HBox>
-            <HBox alignment="CENTER_RIGHT" prefWidth="394.0">
+            <HBox alignment="CENTER_RIGHT" prefHeight="31.0" prefWidth="460.0">
                <children>
-                  <FontAwesomeIconView glyphName="CLOSE" />
+                  <FontAwesomeIconView glyphName="CLOSE" onMouseDragged="#close" styleClass="Icons" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -46,15 +46,15 @@
    <center>
       <Pane prefHeight="436.0" prefWidth="632.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="151.0" fitWidth="136.0" layoutX="506.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true" />
-            <TextField layoutX="116.0" layoutY="29.0" prefHeight="11.0" prefWidth="222.0" />
-            <TextField layoutX="113.0" layoutY="126.0" prefHeight="25.0" prefWidth="227.0" />
-            <TextField layoutX="112.0" layoutY="159.0" prefHeight="25.0" prefWidth="229.0" />
-            <TextField layoutX="112.0" layoutY="192.0" prefHeight="22.0" prefWidth="229.0" />
-            <TextField layoutX="111.0" layoutY="225.0" prefHeight="25.0" prefWidth="231.0" />
+            <ImageView fx:id="uploadedImage" fitHeight="169.0" fitWidth="148.0" layoutX="465.0" layoutY="33.0" pickOnBounds="true" />
+            <TextField fx:id="txtUsuario" layoutX="116.0" layoutY="29.0" prefHeight="11.0" prefWidth="222.0" promptText="Nombre de usuario" />
+            <TextField fx:id="txtFirstName" layoutX="113.0" layoutY="126.0" prefHeight="25.0" prefWidth="227.0" promptText="Nombres del empleado" />
+            <TextField fx:id="txtLastName" layoutX="112.0" layoutY="159.0" prefHeight="25.0" prefWidth="229.0" promptText="Apellidos del Empleado" />
+            <TextField fx:id="txtPhoneNumber" layoutX="112.0" layoutY="192.0" prefHeight="22.0" prefWidth="229.0" promptText="Celular" />
+            <TextField fx:id="txtEmail" layoutX="111.0" layoutY="225.0" prefHeight="25.0" prefWidth="231.0" promptText="Correo Electrónico" />
             <Text layoutX="43.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario:" />
             <Text layoutX="43.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña:" />
-            <PasswordField layoutX="116.0" layoutY="58.0" prefHeight="3.0" prefWidth="222.0" />
+            <PasswordField fx:id="txtPassword" layoutX="116.0" layoutY="58.0" prefHeight="3.0" prefWidth="222.0" promptText="Contraseña del usuario" />
             <Text layoutX="43.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" />
             <Text layoutX="86.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Datos del Empleado" />
             <Text layoutX="43.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombres:" />
@@ -62,16 +62,26 @@
             <Text layoutX="44.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Teléfono:" />
             <Text layoutX="44.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" />
             <Text layoutX="42.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Direccion:" />
-            <TextArea layoutX="111.0" layoutY="293.0" prefHeight="89.0" prefWidth="355.0" />
+            <TextArea fx:id="txtAddress" layoutX="111.0" layoutY="293.0" prefHeight="89.0" prefWidth="355.0" promptText="Dirección del empleado" />
             <Text layoutX="44.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cédula:" />
-            <TextField layoutX="111.0" layoutY="261.0" prefHeight="25.0" prefWidth="231.0" />
-            <TextField layoutX="500.0" layoutY="180.0" />
-            <Button layoutX="412.0" layoutY="179.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="35.0" />
-            <Button layoutX="457.0" layoutY="179.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="35.0" />
-            <Text layoutX="51.0" layoutY="427.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cargo:" />
-            <ComboBox layoutX="111.0" layoutY="409.0" prefWidth="150.0" />
-            <Text layoutX="308.0" layoutY="427.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Turno:" />
-            <ComboBox layoutX="366.0" layoutY="410.0" prefWidth="150.0" />
+            <TextField fx:id="txtCedula" layoutX="111.0" layoutY="261.0" prefHeight="25.0" prefWidth="231.0" promptText="003-030405-1015F" />
+            <TextField fx:id="txtUrl" layoutX="484.0" layoutY="217.0" prefHeight="25.0" prefWidth="178.0" promptText="Seleccion un archivo o URL" />
+            <Button layoutX="395.0" layoutY="216.0" mnemonicParsing="false" onMouseClicked="#btnImageFromWeb" prefHeight="27.0" prefWidth="35.0">
+               <graphic>
+                  <FontAwesomeIconView glyphName="INTERNET_EXPLORER" />
+               </graphic></Button>
+            <Button layoutX="441.0" layoutY="216.0" mnemonicParsing="false" onMouseClicked="#btnImageFromSystem" prefHeight="27.0" prefWidth="35.0">
+               <graphic>
+                  <OctIconView glyphName="PIN" />
+               </graphic></Button>
+            <Text layoutX="51.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cargo:" />
+            <ComboBox fx:id="cmbCargo" layoutX="111.0" layoutY="398.0" prefWidth="150.0" />
+            <Text layoutX="308.0" layoutY="415.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Turno:" />
+            <ComboBox fx:id="cmbTurno" layoutX="372.0" layoutY="398.0" prefWidth="150.0" />
+            <Text layoutX="440.0" layoutY="269.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Carnet:" />
+            <TextField fx:id="txtCod" layoutX="484.0" layoutY="252.0" prefHeight="25.0" prefWidth="178.0" promptText="2019-0978U" />
+            <Button layoutX="153.0" layoutY="468.0" mnemonicParsing="false" onMouseClicked="#btnAdd" text="Aceptar" />
+            <Button layoutX="421.0" layoutY="468.0" mnemonicParsing="false" onMouseClicked="#btnCancel" text="Cancelar" />
          </children>
       </Pane>
    </center>
