--- a/src/main/resources/Views/peliculaDialog.fxml
+++ b/src/main/resources/Views/peliculaDialog.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="762.0" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.loginDialogController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="762.0" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.peliculaDialogController">
    <top>
       <HBox alignment="CENTER" onMouseDragged="#dragged" onMousePressed="#pressed" scaleShape="false" styleClass="windowsBar" BorderPane.alignment="CENTER">
          <children>
@@ -117,7 +117,7 @@
             <Text layoutX="327.0" layoutY="378.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sala 3" />
             <Button layoutX="399.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#imageFromWeb" prefHeight="22.0" prefWidth="33.0">
                <graphic>
-                  <OctIconView glyphName="RADIO_TOWER" />
+                  <FontAwesomeIconView glyphName="INTERNET_EXPLORER" />
                </graphic></Button>
          </children>
       </Pane>
