--- a/src/main/resources/Views/empleadosStage.fxml
+++ b/src/main/resources/Views/empleadosStage.fxml
@@ -2,6 +2,8 @@
 
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,7 +14,7 @@
 
 <AnchorPane fx:id="contentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="980.0" styleClass="dashBoard" stylesheets="@../Styles/styleDEMO.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.empladosStageController">
    <children>
-      <TableView fx:id="table_Emplados" layoutX="45.0" layoutY="193.0" onContextMenuRequested="#showEmpleado" onMouseClicked="#showEmpleado" prefHeight="445.0" prefWidth="611.0" AnchorPane.bottomAnchor="43.0" AnchorPane.leftAnchor="44.0" AnchorPane.rightAnchor="325.0" AnchorPane.topAnchor="192.0">
+      <TableView fx:id="table_Emplados" layoutX="47.0" layoutY="195.0" onContextMenuRequested="#showEmpleado" onMouseClicked="#showEmpleado" prefHeight="406.0" prefWidth="614.0" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="46.0" AnchorPane.rightAnchor="320.0" AnchorPane.topAnchor="194.0">
         <columns>
           <TableColumn fx:id="column_ID" prefWidth="46.0" text="ID" />
           <TableColumn fx:id="column_COD" minWidth="200.0" prefWidth="200.0" text="Codigo" />
@@ -40,5 +42,20 @@
       <Text fx:id="txtNumero" layoutX="801.0" layoutY="518.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" wrappingWidth="160.13672590255737" />
       <Text fx:id="txtDireccion" boundsType="LOGICAL_VERTICAL_CENTER" layoutX="800.0" layoutY="548.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Arial;" wrappingWidth="146.1367267370224" />
       <FontAwesomeIconView glyphName="SEARCH" layoutX="404.0" layoutY="158.0" size="2em" />
+      <Button graphicTextGap="5.0" layoutX="166.0" layoutY="615.0" mnemonicParsing="false" onMouseClicked="#buttonNew" style="-fx-font-family: Arial;" text="Nuevo">
+         <graphic>
+            <FontAwesomeIconView glyphName="PLUS_SQUARE_ALT" />
+         </graphic>
+      </Button>
+      <Button graphicTextGap="5.0" layoutX="315.0" layoutY="615.0" mnemonicParsing="false" onMouseClicked="#buttonEdit" style="-fx-font-family: Arial;" text="Editar">
+         <graphic>
+            <FontAwesomeIconView glyphName="EDIT" />
+         </graphic>
+      </Button>
+      <Button graphicTextGap="5.0" layoutX="451.0" layoutY="615.0" mnemonicParsing="false" onMouseClicked="#buttonDelete" style="-fx-font-family: Arial;" text="Eliminar">
+         <graphic>
+            <MaterialDesignIconView glyphName="DELETE" />
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
